--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>競合比較表作成サポートプロンプト生成用</title>
+    <title>競合比較表作成プロンプト</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,7 +53,7 @@
     <div class="container mx-auto max-w-4xl p-4 sm:p-6 md:p-8 min-h-screen flex flex-col justify-center">
         
         <header class="text-center mb-10 fade-in">
-            <h1 class="text-4xl sm:text-5xl font-bold text-gradient mb-3">競合比較表作成サポート<br>プロンプト生成</h1>
+            <h1 class="text-4xl sm:text-5xl font-bold text-gradient mb-3">競合比較表</h1>
             <p class="text-slate-400 text-lg">独自の価値と優位性を明確にする比較表を作成します。</p>
         </header>
 
@@ -82,7 +82,7 @@
                                     利用フロー
                                 </h3>
                                 <ol class="list-decimal list-inside mt-2 pl-2 space-y-1 text-slate-400">
-                                     <li>下の入力欄に、「問題」「ボトルネック」「ソリューション」を入力します。</li>
+                                     <li>下の入力欄に、「問題」「課題」「ソリューション」を入力します。</li>
                                     <li>「プロンプトを生成」ボタンで、AIへの指示文が完成します。</li>
                                     <li>「コピー」ボタンで指示文をコピーし、AIに貼り付けて実行します。</li>
                                 </ol>
@@ -106,11 +106,11 @@
                                 <textarea id="problemInput" rows="3" class="w-full p-4 bg-slate-900/70 border border-slate-600 rounded-lg text-slate-200 placeholder-slate-500 transition duration-150 focus-ring-gradient" placeholder="例：世代間の交流が断絶され、高齢者の持つ経験価値と若者の成長機会という、双方にとっての社会的機会が失われていること。"></textarea>
                             </div>
                             <div>
-                                <label for="bottleneckInput" class="block text-lg font-medium text-slate-300 mb-2">【ボトルネック】</label>
+                                <label for="bottleneckInput" class="block text-lg font-medium text-slate-300 mb-2">【課題】</label>
                                 <textarea id="bottleneckInput" rows="3" class="w-full p-4 bg-slate-900/70 border border-slate-600 rounded-lg text-slate-200 placeholder-slate-500 transition duration-150 focus-ring-gradient" placeholder="例：「出会いにおける心理的・物理的な安全性への懸念」と、「互いのスキルやニーズが可視化されておらず、価値交換の機会を発見できない」という二つの障壁が存在すること。"></textarea>
                             </div>
                              <div>
-                                <label for="solutionInput" class="block text-lg font-medium text-slate-300 mb-2">【ソリューションの施策概要】</label>
+                                <label for="solutionInput" class="block text-lg font-medium text-slate-300 mb-2">【施策概要】</label>
                                 <textarea id="solutionInput" rows="4" class="w-full p-4 bg-slate-900/70 border border-slate-600 rounded-lg text-slate-200 placeholder-slate-500 transition duration-150 focus-ring-gradient" placeholder="例：高齢者が持つ多様な経験やスキルを「ライフスキル講座」として出品し、若者がそれを購入・体験できるCtoCプラットフォーム「Cross-Time」を提供する。"></textarea>
                             </div>
                         </div>
